fix flag icon valign

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -985,6 +985,7 @@ body.en {
         background-position: center;
         display: inline-block;
         line-height: 20px;
+        vertical-align:top;
         mix-blend-mode: luminosity;
         &:hover{
           mix-blend-mode: normal;
